[package]
name = "graphics_vid"
version = "0.1.0"
authors = ["Stephen Molyneaux <WimbledonLabs@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "graphics_vid"
path = "src/lib.rs"

[[bin]]
name = "graphics_vid"
path = "src/main.rs"

[dependencies]
minifb = "0.16.0"
cpal = "0.11.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false